# strong-type-generator

./: .gitignore  CMakeLists.txt
include/: data_description.hpp  fixed_string.hpp  generate.hpp  meta.hpp  name_for.hpp  pseudo_string.hpp
include/generators/: concept.hpp  cpp.hpp
src/: demo.cpp
